--- a/app/src/main/res/layout/activity_block.xml
+++ b/app/src/main/res/layout/activity_block.xml
@@ -12,6 +12,7 @@
         android:scaleType="centerCrop" />
 
     <TextView
+        android:id="@+id/tvBlockMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_30_dp"
@@ -22,6 +23,22 @@
         android:textColor="@color/white"
         android:textSize="@dimen/sp_26_sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvMotivationalQuote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tvClose"
+        android:layout_marginStart="@dimen/dp_30_dp"
+        android:layout_marginTop="@dimen/dp_20_dp"
+        android:layout_marginEnd="@dimen/dp_30_dp"
+        android:layout_marginBottom="@dimen/dp_40_dp"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:text="@string/default_motivational_quote"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_18_sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/tvClose"
