--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,9 @@
     <dimen name="dp_16_dp">16dp</dimen>
     <dimen name="dp_20_dp">20dp</dimen>
     <dimen name="dp_30_dp">30dp</dimen>
+    <dimen name="dp_40_dp">40dp</dimen>
     <dimen name="dp_60_dp">60dp</dimen>
     <dimen name="dp_172_dp">172dp</dimen>
+    <dimen name="sp_18_sp">18sp</dimen>
     <dimen name="sp_26_sp">26sp</dimen>
 </resources>
